feat(mobile): добавлен учебный календарь
